--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   }
