--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "express": "^5.1.0",
     "form-data": "^4.0.4",
     "jsonwebtoken": "^9.0.2",
+    "mediasoup": "^3.19.3",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "socket.io": "^4.8.1"
   }
 }
